# exh_bot

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml
api/: dependencies.py  main.py
api/core/: auth.py  jwt.py
api/rabbit/: __init__.py  rabbit.py
api/routers/: __init__.py  auth.py  exchangers.py  mongodb_exchangers.py  monitorings.py  plans.py
api/schemas/: __init__.py  auth.py  exchangers.py  mongo.py  monitorings.py  plans.py
bot/: alembic.ini  main.py
bot/alembic/: env.py
bot/alembic/versions/: 0caf0c02528e_add_username_to_users.py  1b6723218a45_add_new_column.py  4af9d020a5a7_initial.py  5f33b1c30948_create_users_table.py
bot/config/: settings.py
bot/database/: db.py  root.py
bot/database/crud/: exchanger.py
bot/handlers/: handlers.py
bot/keyboards/: keyboards.py
bot/models/: models.py  users.py
bot/mongo/: __init__.py  mongo.py
bot/scripts/: create_admin.py
bot/states/: states.py
