[project]
name = "exchangefeed-bot"
version = "0.1.0"
description = "Бот для обменника"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.15"
dependencies = [
    "aiogram (>=3.23.0,<4.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pymongo (>=4.15.5,<5.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "faststream[rabbit] (>=0.6.5,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
